--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,114 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  background-image: url('/images/pattern-bg-mobile.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 300px;
+
+  @media only screen and (min-width: 768px) {
+    background-image: url('/images/pattern-bg-desktop.png');
+  }
+
+  h1 {
+    font-size: 24px;
+    color: #fff;
+    font-weight: var(--font-500);
+    text-align: center;
+    padding-top: 36px;
+  }
+}
+
+main {
+  position: absolute;
+  top: 70px;
+  right: 50%;
+  transform: translateX(50%);
+  width: 100%;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+}
+
+form {
+  height: 58px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+input,
+button {
+  height: 100%;
+  border: none;
+  outline: none;
+  padding: 20px;
+}
+
+input {
+  border-radius: 15px 0 0 15px;
+  width: 100%;
+  color: var(--Very-Dark-Gray);
+
+  &::placeholder {
+    color: var(--Dark-Gray);
+  }
+}
+
+section {
+  background-color: #fff;
+  width: 100%;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  padding: 28px;
+
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+
+    span:first-child {
+      color: var(--Dark-Gray);
+      font-weight: var(--font-700);
+      font-size: 10px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    span:last-child {
+      font-weight: var(--font-500);
+      color: var(--Very-Dark-Gray);
+    }
+  }
+}
+
+button {
+  border-radius: 0 15px 15px 0;
+  background-color: var(--Very-Dark-Gray);
+}
+
+.container-map {
+  width: 100%;
+  z-index: -1;
+}
+
+.attribution {
+  font-size: 12px;
+  position: absolute;
+  bottom: 0;
+  right: 50%;
+  transform: translateX(50%);
+  text-align: center;
+  margin-bottom: 1rem;
 }
